--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "formik": "^2.2.9",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "use-http": "^1.0.26",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
@@ -43,7 +48,8 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "msw": "^0.36.8"
+    "msw": "^0.36.8",
+    "sass": "^1.57.1"
   },
   "msw": {
     "workerDirectory": "public"
